# VITAlbum

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
.github/workflows/: build.yml
.travis/: build.sh
include/: config.h  fs.h  gui.h  keyboard.h  log.h  popups.h  reader.h  stb_image_resize.h  tabs.h  textures.h  utils.h  windows.h
libs/imgui/: imconfig.h  imgui.cpp  imgui_impl_vitagl.cpp  imgui_impl_vitagl.h
libs/libtiff/: tif_config.h  tiffconf.h
libs/turbojpeg/: jconfig.h
source/: config.cpp  fs.cpp  gui.cpp  image.cpp  imgui_impl_vitagl.cpp  keyboard.cpp  log.cpp  main.cpp  reader.cpp  textures.cpp  utils.cpp  viewer.cpp  window.cpp
source/popups/: properties.cpp
source/tabs/: filebrowser.cpp  settings.cpp
source/windows/: filebrowser.cpp  gif.cpp  image.cpp  settings.cpp
